expanded.rs

pub const JanetOpArgType_JANET_OAT_SLOT: JanetOpArgType = 0;
pub const JanetOpArgType_JANET_OAT_ENVIRONMENT: JanetOpArgType = 1;
pub const JanetOpArgType_JANET_OAT_CONSTANT: JanetOpArgType = 2;
pub const JanetOpArgType_JANET_OAT_INTEGER: JanetOpArgType = 3;
pub const JanetOpArgType_JANET_OAT_TYPE: JanetOpArgType = 4;
pub const JanetOpArgType_JANET_OAT_SIMPLETYPE: JanetOpArgType = 5;
pub const JanetOpArgType_JANET_OAT_LABEL: JanetOpArgType = 6;
pub const JanetOpArgType_JANET_OAT_FUNCDEF: JanetOpArgType = 7;
/// START SECTION OPCODES
pub type JanetOpArgType = ::libc::c_uint;
pub const JanetInstructionType_JINT_0: JanetInstructionType = 0;
pub const JanetInstructionType_JINT_S: JanetInstructionType = 1;
pub const JanetInstructionType_JINT_L: JanetInstructionType = 2;
pub const JanetInstructionType_JINT_SS: JanetInstructionType = 3;
pub const JanetInstructionType_JINT_SL: JanetInstructionType = 4;
pub const JanetInstructionType_JINT_ST: JanetInstructionType = 5;
pub const JanetInstructionType_JINT_SI: JanetInstructionType = 6;
pub const JanetInstructionType_JINT_SD: JanetInstructionType = 7;
pub const JanetInstructionType_JINT_SU: JanetInstructionType = 8;
pub const JanetInstructionType_JINT_SSS: JanetInstructionType = 9;
pub const JanetInstructionType_JINT_SSI: JanetInstructionType = 10;
pub const JanetInstructionType_JINT_SSU: JanetInstructionType = 11;
pub const JanetInstructionType_JINT_SES: JanetInstructionType = 12;
pub const JanetInstructionType_JINT_SC: JanetInstructionType = 13;
pub type JanetInstructionType = ::libc::c_uint;
pub const JanetOpCode_JOP_NOOP: JanetOpCode = 0;
pub const JanetOpCode_JOP_ERROR: JanetOpCode = 1;
pub const JanetOpCode_JOP_TYPECHECK: JanetOpCode = 2;
pub const JanetOpCode_JOP_RETURN: JanetOpCode = 3;
pub const JanetOpCode_JOP_RETURN_NIL: JanetOpCode = 4;
pub const JanetOpCode_JOP_ADD_IMMEDIATE: JanetOpCode = 5;
pub const JanetOpCode_JOP_ADD: JanetOpCode = 6;
pub const JanetOpCode_JOP_SUBTRACT: JanetOpCode = 7;
pub const JanetOpCode_JOP_MULTIPLY_IMMEDIATE: JanetOpCode = 8;
pub const JanetOpCode_JOP_MULTIPLY: JanetOpCode = 9;
pub const JanetOpCode_JOP_DIVIDE_IMMEDIATE: JanetOpCode = 10;
pub const JanetOpCode_JOP_DIVIDE: JanetOpCode = 11;
pub const JanetOpCode_JOP_MODULO: JanetOpCode = 12;
pub const JanetOpCode_JOP_REMAINDER: JanetOpCode = 13;
pub const JanetOpCode_JOP_BAND: JanetOpCode = 14;
pub const JanetOpCode_JOP_BOR: JanetOpCode = 15;
pub const JanetOpCode_JOP_BXOR: JanetOpCode = 16;
pub const JanetOpCode_JOP_BNOT: JanetOpCode = 17;
pub const JanetOpCode_JOP_SHIFT_LEFT: JanetOpCode = 18;
pub const JanetOpCode_JOP_SHIFT_LEFT_IMMEDIATE: JanetOpCode = 19;
pub const JanetOpCode_JOP_SHIFT_RIGHT: JanetOpCode = 20;
pub const JanetOpCode_JOP_SHIFT_RIGHT_IMMEDIATE: JanetOpCode = 21;
pub const JanetOpCode_JOP_SHIFT_RIGHT_UNSIGNED: JanetOpCode = 22;
pub const JanetOpCode_JOP_SHIFT_RIGHT_UNSIGNED_IMMEDIATE: JanetOpCode = 23;
pub const JanetOpCode_JOP_MOVE_FAR: JanetOpCode = 24;
pub const JanetOpCode_JOP_MOVE_NEAR: JanetOpCode = 25;
pub const JanetOpCode_JOP_JUMP: JanetOpCode = 26;
pub const JanetOpCode_JOP_JUMP_IF: JanetOpCode = 27;
pub const JanetOpCode_JOP_JUMP_IF_NOT: JanetOpCode = 28;
pub const JanetOpCode_JOP_JUMP_IF_NIL: JanetOpCode = 29;
pub const JanetOpCode_JOP_JUMP_IF_NOT_NIL: JanetOpCode = 30;
pub const JanetOpCode_JOP_GREATER_THAN: JanetOpCode = 31;
pub const JanetOpCode_JOP_GREATER_THAN_IMMEDIATE: JanetOpCode = 32;
pub const JanetOpCode_JOP_LESS_THAN: JanetOpCode = 33;
pub const JanetOpCode_JOP_LESS_THAN_IMMEDIATE: JanetOpCode = 34;
pub const JanetOpCode_JOP_EQUALS: JanetOpCode = 35;
pub const JanetOpCode_JOP_EQUALS_IMMEDIATE: JanetOpCode = 36;
pub const JanetOpCode_JOP_COMPARE: JanetOpCode = 37;
pub const JanetOpCode_JOP_LOAD_NIL: JanetOpCode = 38;
pub const JanetOpCode_JOP_LOAD_TRUE: JanetOpCode = 39;
pub const JanetOpCode_JOP_LOAD_FALSE: JanetOpCode = 40;
pub const JanetOpCode_JOP_LOAD_INTEGER: JanetOpCode = 41;
pub const JanetOpCode_JOP_LOAD_CONSTANT: JanetOpCode = 42;
pub const JanetOpCode_JOP_LOAD_UPVALUE: JanetOpCode = 43;
pub const JanetOpCode_JOP_LOAD_SELF: JanetOpCode = 44;
pub const JanetOpCode_JOP_SET_UPVALUE: JanetOpCode = 45;
pub const JanetOpCode_JOP_CLOSURE: JanetOpCode = 46;
pub const JanetOpCode_JOP_PUSH: JanetOpCode = 47;
pub const JanetOpCode_JOP_PUSH_2: JanetOpCode = 48;
pub const JanetOpCode_JOP_PUSH_3: JanetOpCode = 49;
pub const JanetOpCode_JOP_PUSH_ARRAY: JanetOpCode = 50;
pub const JanetOpCode_JOP_CALL: JanetOpCode = 51;
pub const JanetOpCode_JOP_TAILCALL: JanetOpCode = 52;
pub const JanetOpCode_JOP_RESUME: JanetOpCode = 53;
pub const JanetOpCode_JOP_SIGNAL: JanetOpCode = 54;
pub const JanetOpCode_JOP_PROPAGATE: JanetOpCode = 55;
pub const JanetOpCode_JOP_IN: JanetOpCode = 56;
pub const JanetOpCode_JOP_GET: JanetOpCode = 57;
pub const JanetOpCode_JOP_PUT: JanetOpCode = 58;
pub const JanetOpCode_JOP_GET_INDEX: JanetOpCode = 59;
pub const JanetOpCode_JOP_PUT_INDEX: JanetOpCode = 60;
pub const JanetOpCode_JOP_LENGTH: JanetOpCode = 61;
pub const JanetOpCode_JOP_MAKE_ARRAY: JanetOpCode = 62;
pub const JanetOpCode_JOP_MAKE_BUFFER: JanetOpCode = 63;
pub const JanetOpCode_JOP_MAKE_STRING: JanetOpCode = 64;
pub const JanetOpCode_JOP_MAKE_STRUCT: JanetOpCode = 65;
pub const JanetOpCode_JOP_MAKE_TABLE: JanetOpCode = 66;
pub const JanetOpCode_JOP_MAKE_TUPLE: JanetOpCode = 67;
pub const JanetOpCode_JOP_MAKE_BRACKET_TUPLE: JanetOpCode = 68;
pub const JanetOpCode_JOP_GREATER_THAN_EQUAL: JanetOpCode = 69;
pub const JanetOpCode_JOP_LESS_THAN_EQUAL: JanetOpCode = 70;
pub const JanetOpCode_JOP_NEXT: JanetOpCode = 71;
pub const JanetOpCode_JOP_NOT_EQUALS: JanetOpCode = 72;
pub const JanetOpCode_JOP_NOT_EQUALS_IMMEDIATE: JanetOpCode = 73;
pub const JanetOpCode_JOP_CANCEL: JanetOpCode = 74;
pub const JanetOpCode_JOP_INSTRUCTION_COUNT: JanetOpCode = 75;
pub type JanetOpCode = ::libc::c_uint;
extern "C" {
    pub static mut janet_instructions: [JanetInstructionType; 75usize];
}
extern "C" {
    pub static janet_stream_type: JanetAbstractType;
}
extern "C" {
    pub static janet_channel_type: JanetAbstractType;
}
extern "C" {
    pub fn janet_loop();
}
extern "C" {
    pub fn janet_loop_done() -> ::libc::c_int;
}
extern "C" {
    pub fn janet_loop1() -> *mut JanetFiber;
}
extern "C" {
    pub fn janet_loop1_interrupt(vm: *mut JanetVM);
}
extern "C" {
    pub fn janet_stream(
        handle: JanetHandle,
        flags: u32,
        methods: *const JanetMethod,
    ) -> *mut JanetStream;
}
extern "C" {
    pub fn janet_stream_close(stream: *mut JanetStream);
}
extern "C" {
    pub fn janet_cfun_stream_close(argc: i32, argv: *mut Janet) -> Janet;
}
extern "C" {
    pub fn janet_cfun_stream_read(argc: i32, argv: *mut Janet) -> Janet;
}
extern "C" {
    pub fn janet_cfun_stream_chunk(argc: i32, argv: *mut Janet) -> Janet;
}
extern "C" {
    pub fn janet_cfun_stream_write(argc: i32, argv: *mut Janet) -> Janet;
}
extern "C" {
    pub fn janet_stream_flags(stream: *mut JanetStream, flags: u32);
}
extern "C" {
    pub fn janet_schedule(fiber: *mut JanetFiber, value: Janet);
}
extern "C" {
    pub fn janet_cancel(fiber: *mut JanetFiber, value: Janet);
}
extern "C" {
    pub fn janet_schedule_signal(fiber: *mut JanetFiber, value: Janet, sig: JanetSignal);
}
extern "C" {
    pub fn janet_listen(
        stream: *mut JanetStream,
        behavior: JanetListener,
        mask: ::libc::c_int,
        size: usize,
        user: *mut ::libc::c_void,
    ) -> *mut JanetListenerState;
}
extern "C" {
    pub fn janet_await() -> !;
}
extern "C" {
    pub fn janet_sleep_await(sec: f64) -> !;
}
extern "C" {
    pub fn janet_addtimeout(sec: f64);
}
extern "C" {
    pub fn janet_ev_inc_refcount();
}
extern "C" {
    pub fn janet_ev_dec_refcount();
}
extern "C" {
    pub fn janet_abstract_begin_threaded(
        atype: *const JanetAbstractType,
        size: usize,
    ) -> *mut ::libc::c_void;
}
extern "C" {
    pub fn janet_abstract_end_threaded(x: *mut ::libc::c_void) -> *mut ::libc::c_void;
}
extern "C" {
    pub fn janet_abstract_threaded(
        atype: *const JanetAbstractType,
        size: usize,
    ) -> *mut ::libc::c_void;
}
extern "C" {
    pub fn janet_abstract_incref(abst: *mut ::libc::c_void) -> i32;
}
extern "C" {
    pub fn janet_abstract_decref(abst: *mut ::libc::c_void) -> i32;
}
extern "C" {
    pub fn janet_os_mutex_size() -> usize;
}
extern "C" {
    pub fn janet_os_rwlock_size() -> usize;
}
extern "C" {
    pub fn janet_os_mutex_init(mutex: *mut JanetOSMutex);
}
extern "C" {
    pub fn janet_os_mutex_deinit(mutex: *mut JanetOSMutex);
}
extern "C" {
    pub fn janet_os_mutex_lock(mutex: *mut JanetOSMutex);
}
extern "C" {
    pub fn janet_os_mutex_unlock(mutex: *mut JanetOSMutex);
}
extern "C" {
    pub fn janet_os_rwlock_init(rwlock: *mut JanetOSRWLock);
}
extern "C" {
    pub fn janet_os_rwlock_deinit(rwlock: *mut JanetOSRWLock);
}
extern "C" {
    pub fn janet_os_rwlock_rlock(rwlock: *mut JanetOSRWLock);
}
extern "C" {
    pub fn janet_os_rwlock_wlock(rwlock: *mut JanetOSRWLock);
}
extern "C" {
    pub fn janet_os_rwlock_runlock(rwlock: *mut JanetOSRWLock);
}
extern "C" {
    pub fn janet_os_rwlock_wunlock(rwlock: *mut JanetOSRWLock);
}
extern "C" {
    pub fn janet_ev_lasterr() -> Janet;
}
#[repr(C)]
pub struct JanetEVGenericMessage {
    pub tag: ::libc::c_int,
    pub argi: ::libc::c_int,
    pub argp: *mut ::libc::c_void,
    pub argj: Janet,
    pub fiber: *mut JanetFiber,
}
#[automatically_derived]
impl ::core::marker::Copy for JanetEVGenericMessage {}
#[automatically_derived]
impl ::core::clone::Clone for JanetEVGenericMessage {
    #[inline]
    fn clone(&self) -> JanetEVGenericMessage {
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        let _: ::core::clone::AssertParamIsClone<*mut ::libc::c_void>;
        let _: ::core::clone::AssertParamIsClone<Janet>;
        let _: ::core::clone::AssertParamIsClone<*mut JanetFiber>;
        *self
    }
}
pub type JanetThreadedSubroutine = ::core::option::Option<
    unsafe extern "C" fn(arguments: JanetEVGenericMessage) -> JanetEVGenericMessage,
>;
pub type JanetCallback = ::core::option::Option<
    unsafe extern "C" fn(return_value: JanetEVGenericMessage),
>;
pub type JanetThreadedCallback = ::core::option::Option<
    unsafe extern "C" fn(return_value: JanetEVGenericMessage),
>;
extern "C" {
    pub fn janet_ev_threaded_call(
        fp: JanetThreadedSubroutine,
        arguments: JanetEVGenericMessage,
        cb: JanetThreadedCallback,
    );
}
extern "C" {
    pub fn janet_ev_threaded_await(
        fp: JanetThreadedSubroutine,
        tag: ::libc::c_int,
        argi: ::libc::c_int,
        argp: *mut ::libc::c_void,
    ) -> !;
}
extern "C" {
    pub fn janet_ev_post_event(
        vm: *mut JanetVM,
        cb: JanetCallback,
        msg: JanetEVGenericMessage,
    );
}
extern "C" {
    pub fn janet_ev_default_threaded_callback(return_value: JanetEVGenericMessage);
}
extern "C" {
    pub fn janet_ev_read(stream: *mut JanetStream, buf: *mut JanetBuffer, nbytes: i32);
}
extern "C" {
    pub fn janet_ev_readchunk(
        stream: *mut JanetStream,
        buf: *mut JanetBuffer,
        nbytes: i32,
    );
}
extern "C" {
    pub fn janet_ev_recv(
        stream: *mut JanetStream,
        buf: *mut JanetBuffer,
        nbytes: i32,
        flags: ::libc::c_int,
    );
}
extern "C" {
    pub fn janet_ev_recvchunk(
        stream: *mut JanetStream,
        buf: *mut JanetBuffer,
        nbytes: i32,
        flags: ::libc::c_int,
    );
}
extern "C" {
    pub fn janet_ev_recvfrom(
        stream: *mut JanetStream,
        buf: *mut JanetBuffer,
        nbytes: i32,
        flags: ::libc::c_int,
    );
}
extern "C" {
    pub fn janet_ev_write_buffer(stream: *mut JanetStream, buf: *mut JanetBuffer);
}
extern "C" {
    pub fn janet_ev_write_string(stream: *mut JanetStream, str_: JanetString);
}
